Commit de prueba

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Timer</title>
 </head>
 <body>
-    <h1><b>Hola mundo</b></h1>
+    <h1><b>Timer</b></h1>
+    <button>|||</button>
+    <button>Reset</button>
 </body>
 </html>
