--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
+<header class="page-head">
+    <a class="tittle">Timer</a>
+    <button class="options">Options</button>
+
+</header>
+
 <body>
-    <h1><b>Hola mundo</b></h1>
+    <div class="box">
+        <div class="box-clock">
+            <div class="digital-clock">Hola</div>
+        </div>
+    </div>
 </body>
+
 </html>
