--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <header class="page-head">
@@ -59,7 +59,7 @@
         <button class="restart">Restart</button>
     </div>
 
-    <script src="main.js"></script>
+    <script src="./javascript/main.js"></script>
 </body>
 
 </html>
