Correction in play / pause button and added external libraries
Shadows were corrected when pressing the play button. In addition, external libraries were added for the future implementation of the progress circle.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="loading-bar.css"/>
 </head>
 
 <header class="page-head">
@@ -60,6 +61,7 @@
     </div>
 
     <script src="./javascript/main.js"></script>
+    <script type="text/javascript" src="loading-bar.js"></script>
 </body>
 
 </html>
