[ADD] Circular progress bar multicolor

--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
             </div>
         </div>
         <div class="outer-circle">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
             <div class="middle-circle">
-            
                 <button class="inner-circle">
                     <div class="play-button" id="play">
                         <img src="./source/play.svg" alt="Play button">
                     </div>
                 </button>
-
             </div>
         </div>
         <button class="restart">Restart</button>
