--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             </div>
         </div>
         <div class="outer-circle">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="circularProgressBar"></span>
+            <span class="circularProgressBar"></span>
+            <span class="circularProgressBar"></span>
+            <span class="circularProgressBar"></span>
+            <span class="circularProgressBar"></span>
+            
             <div class="middle-circle">
                 <button class="inner-circle">
                     <div class="play-button" id="play">
