[ADD] All the UI and some options for the timer

--- a/clock.html
+++ b/clock.html
@@ -18,7 +18,7 @@
         <header>
             <ul class="dropdown" id="dropdown">
                 <div class="options-dropdown">
-                    <i class="material-icons" id="code-icon">chevron_right</i>
+                    <i class="material-icons" id="dropdown-icon">chevron_right</i>
                     <input type="text" value="Options" readonly="" id="input-option">
                 </div>
 
@@ -26,7 +26,7 @@
                 <ul class="options" id="options">
                     <li opName="Clock"><a href="./clock.html">Clock</a></li>
                     <li opName="Stopwatch"><a href="./stopwatch.html">Stopwatch</a></li>
-                    <li opNme="Timer"><a href="https://www.youtube.com/watch?v=YbgT-H39cnQ">Timer</a></li>
+                    <li opNme="Timer"><a href="./timer.html">Timer</a></li>
                 </ul>
             </ul>
             <p>CRONUX</p>
@@ -71,7 +71,6 @@
             <div class="tools">
                 <a href="https://github.com/Euphorichuman/TimerWeb/blob/main/README.md" target="_blank"
                     rel="noopener noreferrer" class="material-icons" id="info-icon">info</a>
-                <a href="javascript:alert('Not available yet');" class="material-icons" id="settings-icon">settings</a>
             </div>
         </footer>
     </div>
