[ADD] All the required features for Timer

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -69,14 +69,14 @@
             <span class="circularProgressBar"></span>
 
             <div class="middle-circle">
-                <button onclick="startTimer()" class="inner-circle" id="play-circle">
+                <button onclick="startStopwatch()" class="inner-circle" id="play-circle">
                     <div class="play-button" id="play">
                         <img src="./source/play.svg" alt="Play button">
                     </div>
                 </button>
             </div>
         </div>
-        <button class="reset-button" onclick="resetTimer()">Reset</button>
+        <button class="reset-button" onclick="resetStopwatch()">Reset</button>
         <footer>
             <div class="author-info">
                 <a href="https://github.com/Euphorichuman" target="_blank" rel="noopener noreferrer"
