--- a/timer.html
+++ b/timer.html
@@ -64,7 +64,7 @@
                     <button onclick="updateSeconds(this.id)" class="material-icons" id="add-sec">add</button>
                 </div>
             </div>
-            <button onclick="updateClock()" class="accept-button">Accept</button>
+            <button onclick="updateClockSettings()" class="accept-button">Accept</button>
         </div>
 
         <div class="box-clock">
@@ -122,7 +122,6 @@
                 <a href="https://github.com/Euphorichuman/TimerWeb/blob/main/README.md" target="_blank"
                     rel="noopener noreferrer" class="material-icons" id="info-icon">info</a>
                 <!--<a class="material-icons" id="settings-icon">settings</a>-->
-                
             </div>
         </footer>
     </div>
