--- a/stopwatch.html
+++ b/stopwatch.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronux</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/clockStyle.css">
-    <link rel="stylesheet" href="./css/stopwatchStyle.css">
-    <link rel="stylesheet" href="./css/timerStyle.css">
+
+    <!--CSS stylesheets-->
+    <link rel="stylesheet" href="./css/style.css" id="general-style">
+    <link rel="stylesheet" href="./css/clockStyle.css" id="clock-style">
+    <link rel="stylesheet" href="./css/stopwatchStyle.css" id="stopwatch-style">
+    <link rel="stylesheet" href="./css/timerStyle.css" id="timer-style">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -79,36 +82,22 @@
         <button class="reset-button" onclick="resetStopwatch()">Reset</button>
         <footer>
             <div class="author-info">
-                <a href="https://github.com/Euphorichuman" target="_blank" rel="noopener noreferrer"
-                    class="material-icons" id="code-icon">code</a>
-                <a href="https://github.com/Euphorichuman" target="_blank" rel="noopener noreferrer"
-                    class="author-link">By Euphorichuman</a>
+                <a href="https://github.com/Euphorichuman" target="_blank" rel="noopener noreferrer" class="material-icons" id="code-icon">code</a>
+                <a href="https://github.com/Euphorichuman" target="_blank" rel="noopener noreferrer" class="author-link">By Euphorichuman</a>
             </div>
             <div class="tools">
-                <a href="https://github.com/Euphorichuman/TimerWeb/blob/main/README.md" target="_blank"
-                    rel="noopener noreferrer" class="material-icons" id="info-icon">info</a>
+                <a href="https://github.com/Euphorichuman/TimerWeb/blob/main/README.md" target="_blank" rel="noopener noreferrer" class="material-icons" id="info-icon">info</a>
             </div>
         </footer>
     </div>
     <script src="./javascript/stopwatchCode.js"></script>
+    <script src="./javascript/darkModeCode.js"></script>
     <script type="text/javascript">
         var dropdown = document.getElementById("dropdown");
 
-        dropdown.addEventListener("click", function () {
+        dropdown.addEventListener("click", function() {
             this.classList.toggle("show");
         });
-    </script>
-    <script>
-        function darkMode() {
-            var x = document.getElementById("dark-mode");
-            alert('Not available yet');
-            // TO DO
-            /*if (x.innerHTML === "light_mode") {
-                x.innerHTML = "dark_mode";
-            } else {
-                x.innerHTML = "light_mode";
-            }*/
-        }
     </script>
 </body>
 
